使用RxJava优化代码逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity android:name=".LaunchActivity">
 
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".CaptureActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
