--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MSMediaCodec">
-        <activity android:name=".LaunchActivity">
+        <activity android:name=".activity.LaunchActivity">
 
         </activity>
-        <activity android:name=".CaptureActivity">
+        <activity android:name=".activity.CaptureActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
