--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MSMediaCodec">
-        <activity android:name=".activity.MSPlayerActivity"
-            android:label="播放页面"
-            ></activity>
-        <activity android:name=".activity.LaunchActivity"></activity>
-        <activity android:name=".activity.CaptureActivity"
-            android:label="录制页面"
-            >
+        <activity
+            android:name=".activity.MSEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MSPlayerActivity"
+            android:label="播放页面" />
+        <activity android:name=".activity.LaunchActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.CaptureActivity"
+            android:label="录制页面">
+
         </activity>
 
         <meta-data
